--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
-<head></head>
-<body>this is a test</body>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  </head>
+  <body style="background-color: #66023C">
+    <div style="display: flex; align-items: center; justify-content: center; height: 61.8%">
+      <div style="color:#FFFFFF; font-family: 'Cabin', sans-serif; letter-spacing: 0.2em; font-size: 6em">BIZANTIUM</div>
+    </div>
+  </body>
 </html>
