--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
   </head>
   <body style="background-color: #66023C">
     <div style="display: flex; align-items: center; justify-content: center; height: 61.8%">
-      <div style="color:#FFFFFF; font-family: 'Cabin', sans-serif; letter-spacing: 0.2em; font-size: 6em">BIZANTIUM</div>
+      <div style="color:#FFFFFF; font-family: 'Lato', sans-serif; letter-spacing: 0.2em; font-size: 6em; font-weight:100">BIZANTIUM</div>
     </div>
   </body>
 </html>
